--- a/dotaznik.html
+++ b/dotaznik.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css">
   <title>Výživa – odporúčania s fotkami</title>
-  <link rel="icon" type="image/x-icon" href="images/favicon.ico">
+  <link rel="icon" type="image/png" href="images/favicon3.png">
 </head>
 <body>
   <header>
